--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@ html {
     box-sizing: border-box;
     width: 100%;
     scroll-behavior: smooth;
+    background-color: rgb(82, 81, 81);
 }
 
 
@@ -19,6 +20,7 @@ nav > ul {
     right: 0;
     left: 0;
     color: black;
+    z-index: 6;
 }
 
 
@@ -63,11 +65,87 @@ h1 {
     font-size: 1.5rem;
 }
 
+
+#projects {
+    margin-left: 10vh;
+    margin-right: 10vh;
+    margin-bottom: 10vh;
+    background-color: rgb(82, 81, 81);
+}
+h2 {
+    font-size: 2rem;
+    text-align: center;
+    margin-bottom: 20px;
+    padding-top: 20px;
+}
 .project-grid {
     display: grid;
-    grid-template-columns: ;
-    width: 100vh;
+    grid-template-columns: auto auto;
+    column-gap: 10%;
+    row-gap: 10%;
+}
+
 
 img {
-    max-width: 30%;
+    max-width: 600px;
 }
+
+
+figure {
+    text-align: center;
+    height: auto;
+    width: 50%;
+    background-color: orange;
+    transition-property: width;
+    transition-duration: 2s;
+    z-index: 2;
+}
+
+figure:hover {
+    width:100%;
+}
+
+@media (max-width: 1200px) {
+    nav > ul {
+        padding: 2px;
+    }
+
+    .project-grid {
+        display: grid;
+        grid-template-columns: auto;
+        grid-template-rows: auto auto auto auto;
+        margin-bottom: 100%;
+    }
+    img {
+        max-width: 100%;
+    }
+
+    figure {
+        width: 100%;
+        transition-property: width;
+        transition-duration: 2s;
+    }
+    figure:hover {
+        width: 120%;
+    }
+}
+
+
+#contact_list {
+    display: flex;
+    justify-content: center;
+}
+
+#profile-link > img {
+    max-width: 20%;
+    border-radius: 50%;
+    margin-left: 50%;
+    margin-right: 50%;
+    transition-property: opacity;
+    transition-duration: 1s;
+}
+
+#profile-link > img:hover {
+    opacity: 0.4;
+}
+
